--- a/index.html
+++ b/index.html
@@ -1,7 +1,67 @@
 <!DOCTYPE html>
-<html>
-	<body>
-		<h1>Hellooow</h1>
-		<p>test</p>
-	</body>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Test CSS3 HTML5</title>
+
+    <!--[if IE]>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+
+    <link href="IEStyleSheet.css" rel="stylesheet" />
+    <![endif]-->
+
+    <!--[if !IE]> -->
+        <link href="StyleSheet.css" rel="stylesheet" type="text/css" media="only screen" />
+        <link href="MobileStyleSheet.css" rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px) , only screen and (-webkit-min-device-pixel-ratio: 2) , screen and (-webkit-device-pixel-ratio:1.5)" />
+        <!-- <![endif]-->
+
+    <!--[if IEMobile]> 
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+
+        <link href="MobileStyleSheet.css" rel="stylesheet" />
+    <![endif]-->
+	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+
+</head>
+<body>
+        <div class="Container">
+            <header>
+                <span>Adjustable WebSite Example using HTML5 CSS3 </span>
+            </header>
+            <nav>
+            </nav>
+            <div class="content">
+                <section class="main_articles">
+                    <article class="siteDescription">
+                        <div class="desImage">
+                            <img src="Images/css_image.jpg" />
+                        </div>
+                        <div class="des">
+                            New web development technologies.
+                        </div>
+                    </article>
+                </section>
+
+                <aside class="side_article">
+                    <div class="ads">
+                        This is a Advertisement.
+                    </div>
+
+                    <div class="ads">
+                        This is a Advertisement.
+                    </div>
+                </aside>
+            </div>
+            <footer>
+            </footer>
+        </div>
+
+</body>
 </html>
