--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Test CSS3 HTML5</title>
+    <title>STA</title>
 
     <!--[if IE]>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,7 @@
 <body>
         <div class="Container">
             <header>
-                <span>Adjustable WebSite Example using HTML5 CSS3 </span>
+                <span>Svenska TechnoAkademien</span>
             </header>
             <nav>
             </nav>
@@ -41,14 +41,14 @@
                 <section class="main_articles">
                     <article class="siteDescription">
                         <div class="desImage">
-                            <img src="Images/css_image.jpg" />
+                            <img src="Img/qr.jpg" />
                         </div>
                         <div class="des">
                             New web development technologies.
                         </div>
                     </article>
                 </section>
-
+<!-->
                 <aside class="side_article">
                     <div class="ads">
                         This is a Advertisement.
@@ -58,6 +58,7 @@
                         This is a Advertisement.
                     </div>
                 </aside>
+</!-->
             </div>
             <footer>
             </footer>
