Ändra tema och form

--- a/index.html
+++ b/index.html
@@ -4,26 +4,7 @@
 <head>
     <title>STA</title>
 
-    <!--[if IE]>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-
-    <link href="IEStyleSheet.css" rel="stylesheet" />
-    <![endif]-->
-
-    <!--[if !IE]> -->
-        <link href="StyleSheet.css" rel="stylesheet" type="text/css" media="only screen" />
-        <link href="MobileStyleSheet.css" rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px) , only screen and (-webkit-min-device-pixel-ratio: 2) , screen and (-webkit-device-pixel-ratio:1.5)" />
-        <!-- <![endif]-->
-
-    <!--[if IEMobile]> 
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-
-        <link href="MobileStyleSheet.css" rel="stylesheet" />
-    <![endif]-->
+    <link href="StyleSheet.css" rel="stylesheet" type="text/css" media="only screen" />
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,33 +14,26 @@
 <body>
         <div class="Container">
             <header>
-                <span>Svenska TechnoAkademien</span>
+                <span>Svenska<br>  TechnoAkademien</span>
             </header>
             <nav>
             </nav>
             <div class="content">
                 <section class="main_articles">
                     <article class="siteDescription">
+                        <div class="des">
+                            <br>
+							Nästa fest är i höst någon gång
+                        </div>
                         <div class="desImage">
                             <img src="Img/qr.jpg" />
-                        </div>
-                        <div class="des">
-                            New web development technologies.
+							QR för Swish
                         </div>
                     </article>
                 </section>
-<!-->
-                <aside class="side_article">
-                    <div class="ads">
-                        This is a Advertisement.
-                    </div>
-
-                    <div class="ads">
-                        This is a Advertisement.
-                    </div>
-                </aside>
-</!-->
             </div>
+			<nav>
+            </nav>
             <footer>
             </footer>
         </div>
