--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <article class="siteDescription">
                         <div class="des">
                             <br>
-							Nästa fest är i höst någon gång
+							Nästa fest är i vinter någon gång, kanske nyår?
                         </div>
                         <div class="desImage">
                             <img src="Img/qr.jpg" />
